# phototag

./: .gitignore  LICENSE  README.md  pyproject.toml  this_week.py
docs/: 2026-04-05-phototag-layers-design.md
docs/superpowers/plans/: 2026-04-05-m1.5-model-eval.md  2026-04-05-m2-layer1-refactor.md  2026-04-05-m3-m4-l2-association.md  2026-04-05-m5-story-generation.md  2026-04-05-search-cleanup-merge-html.md  2026-04-05-this-week-prototype.md
eval/: new_prompt.py  run_eval.py  score_results.py
examples/: config.yaml
src/photo_memory/: __init__.py  cli.py  config.py  daily.py  db.py  dedup.py  events.py  html_renderer.py  load_monitor.py  merge.py  people.py  processor.py  recognizer.py  scanner.py  search.py  story.py  tagger.py  video_extractor.py
tests/: conftest.py  test_cli.py  test_config.py  test_daily.py  test_db.py  test_dedup.py  test_events.py  test_html_renderer.py  test_integration.py  test_load_monitor.py  test_merge.py  test_people.py  test_processor.py  test_recognizer.py  test_scanner.py  test_search.py  test_story.py  test_tagger.py  test_video_extractor.py
