[project]
name = "photo-memory"
version = "0.1.0"
description = "Local AI photo organizer and personal memory engine"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "osxphotos>=0.68.0",
    "imagehash>=4.3.1",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "pillow>=10.0.0",
    "mlx-whisper>=0.4.3",
    "httpx[socks]>=0.28.1",
    "openai-whisper>=20250625",
]

[project.scripts]
photo-memory = "photo_memory.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/photo_memory"]

[tool.uv]
package = true
environments = ["sys_platform == 'darwin' and platform_release >= '22.0'"]

